[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msa-nim"
version = "0.3.1"
description = "CLI tool to generate A3M MSA alignments via NVIDIA NIM MSA-Search"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Open Source Contributors"}
]
keywords = ["msa", "mmseqs2", "protein", "alignment", "nvidia", "nim", "alphafold", "colabfold"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.25",
    "art>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
msa-nim = "msa_nim.cli:main"

[project.urls]
Homepage = "https://github.com/nabbo/msa-nim"
Repository = "https://github.com/nabbo/msa-nim"
Issues = "https://github.com/nabbo/msa-nim/issues"

[tool.setuptools.packages.find]
where = ["src"]